Security issues solved