@@ -3,12 +3,14 @@ package com.example.demo.services.impl;
 import com.example.demo.entities.User;
 import com.example.demo.repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +27,8 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList() // no authorities for now
+                List.of(new SimpleGrantedAuthority(user.getRole())) // 👈 e.g. "ADMIN", "CLIENT", "FREELANCER"
+                //Collections.emptyList() // no authorities for now
         );
     }
 }
